# python-project-lvl1

./: .Makefile.swp  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py
brain_games/scripts/: brain_games.py
