[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["hanzo <awakened2013@mail.ru>"]
packages = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.8"
hexlet-code = "^0.1.0"
pyproject-toml = "^0.0.5"
[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

